# hse-ml-first

./: AI_HW1_Lorkin.ipynb  README.md  app.py  eda_report.html  pipeline.pkl  predicted_prices.csv  pyproject.toml  test.csv
