[tool.poetry]
name = "hse-ml-first"
version = "0.1.0"
description = ""
authors = ["lanya-dorkin <danya.lorkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
numpy = "^2.1.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
